--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{{ item[1] }}</h5>
-                    
-                    {% set parts = item[2].split('\n') %}
+
+                    {% set parts = item[2].split('|||') %}
                     <div class="mb-3">
                         <div class="card mb-2 border-secondary">
                             <div class="card-header bg-secondary text-white">Neutral</div>
