--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Balanced News</title>
+    <title>Latest News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-<div class="container mt-4">
-    <h1 class="mb-4 text-center">Balanced News</h1>
-    <div class="row">
-        {% for news in news_items %}
-        <div class="col-md-4 mb-4">
-            <div class="card h-100">
-                {% if news[6] %}
-                <img src="{{ news[6] }}" class="card-img-top" alt="news image">
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">{{ news[1] }}</h5>
-                    <p class="card-text">{{ news[2] }}</p>
-                    <small class="text-muted">{{ news[5] }}</small>
+    <div class="container mt-4">
+        <h1 class="mb-4">Latest News</h1>
+        <div class="row">
+            {% for title, link, published, thumbnail in articles %}
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        {% if thumbnail %}
+                            <img src="{{ thumbnail }}" class="card-img-top" alt="Thumbnail">
+                        {% endif %}
+                        <div class="card-body">
+                            <h5 class="card-title">{{ title }}</h5>
+                            <p class="card-text"><small class="text-muted">{{ published }}</small></p>
+                            <a href="{{ link }}" class="btn btn-primary" target="_blank">Read more</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
-</div>
 </body>
 </html>
